Inline local temporary variable
- Add serialVersionUID
- Use valueOf()